# Rofi-Themer-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  debug.sh  messages.txt  run.sh  temp_rofi_launch.sh
Scripts/: client.sh  daemon.sh  menu.sh  read.sh
data/: color-icons  main.tb  polybar.tb  rofi.tb
include/common/: errors.h  message.h
include/daemon/: common.h  data.h  entry.h  files.h  list.h  table.h
src/client/: main.cpp
src/daemon/: common.cpp  data.cpp  entry.cpp  files.cpp  list.cpp  main.cpp  table.cpp
src/menu/: main.cpp
src/read/: main.cpp
